--- a/website_demo_sha256/certicoqwasm-demo.html
+++ b/website_demo_sha256/certicoqwasm-demo.html
@@ -37,8 +37,8 @@ table {
 </style>
 
 <div class="info">
-  <h1> sha256 demo </h1>
-  This demo allows you to compute the <a href="https://en.wikipedia.org/wiki/SHA-2">sha256 sum</a> using the <a href="https://dl.acm.org/doi/pdf/10.1145/2701415">verified</a> implementation by Andrew Appel,
+  <h1> SHA-256 demo </h1>
+  This demo allows computing the <a href="https://en.wikipedia.org/wiki/SHA-2">SHA-256 sum</a> using the functional, <a href="https://dl.acm.org/doi/pdf/10.1145/2701415">verified implementation</a> (Section 4),
   compiled to Wasm using <a href="https://womeier.de/files/certicoqwasm-coqpl24-abstract.pdf">CertiCoq-Wasm</a>.
 </div>
 
